[package]
name = "crypt4gh-de-sodiumoxide"
description = "Remove unsafe(), CVEs and deprecations from crypt4gh-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
chacha20poly1305 = { version="0.10", git="https://github.com/RustCrypto/AEADs" }
crypto_kx = { version = "0.2.0-pre.0", git = "https://github.com/RustCrypto/nacl-compat/" }
hex-literal = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
sodiumoxide = "0.2"
#sodiumoxide = { version = "0.2", features = ["benchmarks"], path="../sodiumoxide" }
thiserror = "1"
